--- a/Wasmo/Wasmo/Wasmo.vcxproj
+++ b/Wasmo/Wasmo/Wasmo.vcxproj
@@ -152,6 +152,9 @@
   <ItemGroup>
     <ClInclude Include="Wasmo.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Log.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
