--- a/Wasmo.vcxproj
+++ b/Wasmo.vcxproj
@@ -105,7 +105,7 @@
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(SolutionDir)$(Platform)\*.json" "$(SolutionDir)$(Platform)\$(Configuration)\"</Command>
+      <Command>copy "$(SolutionDir)*.json" "$(SolutionDir)$(Platform)\$(Configuration)\"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|MSFS'">
@@ -148,11 +148,15 @@
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(SolutionDir)$(Platform)\*.json" "$(SolutionDir)$(Platform)\$(Configuration)\"</Command>
+      <Command>copy "$(SolutionDir)*.json" "$(SolutionDir)$(Platform)\$(Configuration)\"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Wasmo.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="layout.json" />
+    <None Include="manifest.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
