Add a basic readme.

--- a/Wasmo.vcxproj
+++ b/Wasmo.vcxproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <None Include="layout.json" />
     <None Include="manifest.json" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
