Add some basic INI file stuff.

--- a/Wasmo/Wasmo.vcxproj
+++ b/Wasmo/Wasmo.vcxproj
@@ -152,6 +152,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\inih\cpp\INIReader.cpp" />
     <ClCompile Include="Wasmo.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
