Ensure it compiles properly.

--- a/Wasmo/Wasmo.vcxproj
+++ b/Wasmo/Wasmo.vcxproj
@@ -153,6 +153,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\inih\cpp\INIReader.cpp" />
+    <ClCompile Include="..\inih\ini.c" />
     <ClCompile Include="Wasmo.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
