--- a/Wasmo/Wasmo.vcxproj
+++ b/Wasmo/Wasmo.vcxproj
@@ -103,7 +103,7 @@
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(ProjectDir)\$(Platform)\*.json" "$(OutDir).."</Command>
+      <Command>copy "$(ProjectDir)\*.json" "$(OutDir).."</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|MSFS'">
@@ -146,7 +146,7 @@
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(ProjectDir)\$(Platform)\*.json" "$(OutDir).."</Command>
+      <Command>copy "$(ProjectDir)\*.json" "$(OutDir).."</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
