--- a/Examplezmo/manifest.json
+++ b/Examplezmo/manifest.json
@@ -1,10 +1,10 @@
 {
   "dependencies": [],
   "content_type": "MISC",
-  "title": "Wasmo",
+  "title": "Examplezmo",
   "manufacturer": "",
   "creator”": "DaveGymer.org",
-  "package_version": "0.1.0",
+  "package_version": "0.0.1",
   "minimum_game_version": "1.11.7",
   "release_notes": {
     "neutral": {
