--- a/Examplezmo/Examplezmo.vcxproj
+++ b/Examplezmo/Examplezmo.vcxproj
@@ -67,7 +67,6 @@
       <ConformanceMode>
       </ConformanceMode>
       <BufferSecurityCheck>false</BufferSecurityCheck>
-      <AdditionalIncludeDirectories>../Wasmo;../inih/submodule/cpp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>__wasi__;_STRING_H_CPLUSPLUS_98_CONFORMANCE_;_WCHAR_H_CPLUSPLUS_98_CONFORMANCE_;_LIBCPP_HAS_NO_THREADS;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ShowIncludes>false</ShowIncludes>
       <ExceptionHandling>false</ExceptionHandling>
@@ -114,7 +113,6 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../Wasmo;../inih/submodule/cpp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>__wasi__;_STRING_H_CPLUSPLUS_98_CONFORMANCE_;_WCHAR_H_CPLUSPLUS_98_CONFORMANCE_;_LIBCPP_HAS_NO_THREADS;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <ExceptionHandling>false</ExceptionHandling>
@@ -155,6 +153,9 @@
   <ItemGroup>
     <ProjectReference Include="..\inih\inih.vcxproj">
       <Project>{7ec92233-171f-4cc6-8638-75a469c78d7c}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Wasmo\Wasmo.vcxproj">
+      <Project>{a5468b35-bbbd-4c55-97ed-81bfe343b0e4}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
