--- a/RudderTillerzmo/RudderTillerzmo.vcxproj
+++ b/RudderTillerzmo/RudderTillerzmo.vcxproj
@@ -49,7 +49,9 @@
     <LinkIncremental />
     <IncludePath>$(MSFS_IncludePath)</IncludePath>
     <IntDir>$(ProjectDir)\$(Platform)\$(Configuration)-Temp\</IntDir>
-    <OutDir>$(ProjectDir)\$(Platform)\$(Configuration)\modules\</OutDir>
+    <OutDir>$(ProjectDir)\$(Platform)\$(Configuration)\</OutDir>
+    <TargetName>modules\$(ProjectName)</TargetName>
+    <CopyLocalDeploymentContent>true</CopyLocalDeploymentContent>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|MSFS'">
     <TargetExt>.wasm</TargetExt>
@@ -57,6 +59,7 @@
     <IntDir>$(ProjectDir)\$(Platform)\$(Configuration)-Temp\</IntDir>
     <OutDir>$(ProjectDir)\$(Platform)\$(Configuration)\</OutDir>
     <TargetName>modules\$(ProjectName)</TargetName>
+    <CopyLocalDeploymentContent>true</CopyLocalDeploymentContent>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|MSFS'">
     <ClCompile>
@@ -104,9 +107,7 @@
       </ProfileGuidedDatabase>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
-    <PostBuildEvent>
-      <Command>copy "$(ProjectDir)*.json" "$(OutDir).."</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|MSFS'">
     <ClCompile>
@@ -146,17 +147,24 @@
       </ProfileGuidedDatabase>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Link>
-    <PostBuildEvent>
-      <Command>copy "$(ProjectDir)*.json" "$(OutDir)"</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="RudderTillerzmo.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="layout.json" />
-    <None Include="manifest.json" />
-    <None Include="README.md" />
+    <None Include="layout.json">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|MSFS'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|MSFS'">true</DeploymentContent>
+    </None>
+    <None Include="manifest.json">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|MSFS'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|MSFS'">true</DeploymentContent>
+    </None>
+    <None Include="README.md">
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|MSFS'">true</DeploymentContent>
+      <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|MSFS'">true</DeploymentContent>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\inih\inih.vcxproj">
