--- a/PushbackRudderzmo/PushbackRudderzmo.vcxproj
+++ b/PushbackRudderzmo/PushbackRudderzmo.vcxproj
@@ -57,7 +57,7 @@
     <TargetExt>.wasm</TargetExt>
     <IncludePath>$(MSFS_IncludePath)</IncludePath>
     <IntDir>$(ProjectDir)\$(Platform)\$(Configuration)-Temp\</IntDir>
-    <OutDir>$(ProjectDir)\$(Platform)\$(Configuration)\</OutDir>
+    <OutDir>$(ProjectDir)\$(Platform)\$(ProjectName)\</OutDir>
     <TargetName>modules\$(ProjectName)</TargetName>
     <CopyLocalDeploymentContent>true</CopyLocalDeploymentContent>
   </PropertyGroup>
