--- a/Controlzmo/Controlzmo.vcxproj
+++ b/Controlzmo/Controlzmo.vcxproj
@@ -85,6 +85,7 @@
       </BasicRuntimeChecks>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -125,6 +126,7 @@
       </SupportJustMyCode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>
